# metagpt.nix

./: .gitignore  flake.nix  homeManagerModule.nix  pyproject.toml
.github/: readme.org
.github/workflows/: build-packages.yaml  update-and-build.yaml  update-dependencies.yaml
nix/: hm-module.nix
